@@ -1,9 +1,9 @@
 package com.cognifide.gradle.aem.instance
+
 import com.cognifide.gradle.aem.test.AemBuildTest
 import org.junit.jupiter.api.Test
-import org.junit.jupiter.api.condition.EnabledIfSystemProperty
 
-class InstancePluginTest: AemBuildTest() {
+class InstancePluginTest : AemBuildTest() {
 
     @Test
     fun `should apply plugin correctly`() {
@@ -18,33 +18,13 @@ class InstancePluginTest: AemBuildTest() {
         }
 
         runBuild(projectDir, "tasks", "-Poffline") {
-            assertTask( ":tasks")
+            assertTask(":tasks")
         }
     }
 
-    @EnabledIfSystemProperty(named = "localInstance.jarUrl", matches = ".+")
     @Test
-    fun `should setup local aem author and publish instances`() {
-        val projectDir = prepareProject("instance-setup") {
-            gradleProperties("""
-                fileTransfer.user=${System.getProperty("fileTransfer.user")}
-                fileTransfer.password=${System.getProperty("fileTransfer.password")}
-                fileTransfer.domain=${System.getProperty("fileTransfer.domain")}
-                
-                localInstance.quickstart.jarUrl=${System.getProperty("localInstance.jarUrl")}
-                localInstance.quickstart.licenseUrl=${System.getProperty("localInstance.licenseUrl")}
-                
-                instance.local-author.httpUrl=http://localhost:9502
-                instance.local-author.type=local
-                instance.local-author.runModes=local,nosamplecontent
-                instance.local-author.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true
-
-                instance.local-publish.httpUrl=http://localhost:9503
-                instance.local-publish.type=local
-                instance.local-publish.runModes=local,nosamplecontent
-                instance.local-publish.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true
-                """)
-
+    fun `should define provisioner steps properly`() {
+        val projectDir = prepareProject("instance-provisioner") {
             settingsGradle("")
 
             buildGradle("""
@@ -52,31 +32,39 @@ class InstancePluginTest: AemBuildTest() {
                     id("com.cognifide.aem.instance")
                 }
                 
-                repositories {
-                    jcenter()
-                    maven { url = uri("https://repo.adobe.com/nexus/content/groups/public") }
-                    maven { url = uri("https://dl.bintray.com/neva-dev/maven-public") }
-                }
-                
                 aem {
-                    tasks {
-                        instanceSatisfy {
-                            packages {
-                                "dep.core-components-all"("com.adobe.cq:core.wcm.components.all:2.8.0@zip")
-                                "tool.search-webconsole-plugin"("com.neva.felix:search-webconsole-plugin:1.2.0")
-                            }
-                        }
-                
-                        instanceProvision {
+                    instance {
+                        provisioner {
                             step("enable-crxde") {
                                 description = "Enables CRX DE"
                                 condition { once() && instance.environment != "prod" }
-                                action {
-                                    sync {
-                                        osgiFramework.configure("org.apache.sling.jcr.davex.impl.servlets.SlingDavExServlet", mapOf(
-                                                "alias" to "/crx/server"
+                                sync {
+                                    osgiFramework.configure("org.apache.sling.jcr.davex.impl.servlets.SlingDavExServlet", mapOf(
+                                            "alias" to "/crx/server"
+                                    ))
+                                }
+                            }
+                            step("setup-replication-author") {
+                                condition { once() && instance.author }
+                                sync {
+                                    repository {
+                                        save("/etc/replication/agents.author/publish/jcr:content", mapOf(
+                                                "enabled" to true,
+                                                "userId" to instance.user,
+                                                "transportUri" to "http://localhost:4503/bin/receive?sling:authRequestLogin=1",
+                                                "transportUser" to instance.user,
+                                                "transportPassword" to instance.password
                                         ))
                                     }
+                                }
+                            }
+                            step("disable-unsecure-bundles") {
+                                condition { once() && instance.environment == "prod" }
+                                sync {
+                                    osgiFramework.stopBundle("org.apache.sling.jcr.webdav")
+                                    osgiFramework.stopBundle("com.adobe.granite.crxde-lite")
+                
+                                    instance.awaitUp() // include above in property: 'instance.awaitUp.bundles.symbolicNamesIgnored'
                                 }
                             }
                         }
@@ -85,16 +73,8 @@ class InstancePluginTest: AemBuildTest() {
                 """)
         }
 
-        runBuild(projectDir, "instanceResolve") {
-            assertTask(":instanceResolve")
-        }
-
-        runBuild(projectDir, "instanceSetup") {
-            assertTask(":instanceSetup")
-        }
-
-        runBuild(projectDir, "instanceDestroy", "-Pforce") {
-            assertTask(":instanceDestroy")
+        runBuild(projectDir, "tasks", "-Poffline") {
+            assertTask(":tasks")
         }
     }
 }
